fixing level-readability in char-avatar-images

--- a/public/css/misc.css
+++ b/public/css/misc.css
@@ -88,10 +88,11 @@
 
 .level {
     position:absolute;
-    top:0;
-    right:0;
+    top: 0px;
+    right: 3px;
     font-weight: bold;
     color: white;
+    text-shadow: -1px 0px black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .button {
